...
            "state": "translated",
            "value": "尚未上傳履歷"
          }
        }
      }
    },
    "No applications yet": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "No applications yet"
...
            "state": "translated",
            "value": "還沒有應徵紀錄"
          }
        }
      }
    },
    "No more matches": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "No more matches"
...
            "state": "translated",
            "value": "錄取通知"
          }
        }
      }
    },
    "Only you can answer this": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Only you can answer this"
...
            "state": "translated",
            "value": "儲存變更"
          }
        }
      }
    },
    "Save this answer for future applications": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Save this answer for future applications"
...
